bin/envoy/example_cfg.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 127.0.0.1
        port_value: 9400
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          access_log:
          - name: envoy.file_access_log
            config:
              format: '[%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%
                %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT%
                %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% start %DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT% %DOWNSTREAM_REMOTE_ADDRESS% "%REQ(X-FORWARDED-FOR)%" end
                "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_CLUSTER%"
                "%UPSTREAM_HOST%" "%REQ(X-LYFT-USER-ID)%" "%REQ(X-LYFT-CLIENT-ID)%"

                '
              path: "/dev/stdout"
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: all_routes
            virtual_hosts:
            - name: primary
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: egress_dynamodb_iad
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - connect_timeout: 1s
    dns_lookup_family: V4_ONLY
    hosts:
    - socket_address: {address: dynamodb.us-east-1.amazonaws.com, port_value: 443, protocol: TCP}
    lb_policy: ROUND_ROBIN
    name: egress_dynamodb_iad
    tls_context:
      common_tls_context:
        validation_context:
          trusted_ca: {filename: /etc/ssl/certs/ca-certificates.crt}
          verify_subject_alt_name: [dynamodb.us-east-1.amazonaws.com]
    type: LOGICAL_DNS
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
