bin/envoy/priority_lb.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 127.0.0.1
        port_value: 9400
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          access_log:
          - name: envoy.file_access_log
            config:
              format: '[%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%
              %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% original=%REQ(X-ENVOY-ORIGINAL-PATH)% current=%REQ(:PATH)%


                '
              path: "/dev/stdout"
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: all_routes
            virtual_hosts:
            - domains: ['*']
              name: tony_example_name
              routes:
              - match: {prefix: /}
                route:
                  cluster: tony_example_name
                  retry_policy: {retry_on: connect-failure}
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - connect_timeout: 1s
    dns_lookup_family: V4_ONLY
    health_checks:
    - timeout: 1s
      interval: 0.5s
      unhealthy_threshold: 3
      healthy_threshold: 3
      no_traffic_interval: 3s
      tcp_health_check: {}
    load_assignment:
      cluster_name: tony_example_name
      endpoints:
      - lb_endpoints:
          - endpoint:
              address:
                socket_address: {address: localhost, port_value: 9201, protocol: TCP}
        priority: 0 # Lower number is higher priority.
      - lb_endpoints:
          - endpoint:
              address:
                socket_address: {address: localhost, port_value: 9201, protocol: TCP}
        priority: 0 # Lower number is higher priority.
      - lb_endpoints:
          - endpoint:
              address:
                socket_address: {address: localhost, port_value: 9201, protocol: TCP}
        priority: 0 # Lower number is higher priority.
      - lb_endpoints:
          - endpoint:
              address:
                socket_address: {address: localhost, port_value: 9202, protocol: TCP}
        priority: 1 # Lower number is higher priority.
    http2_protocol_options: {}
    lb_policy: ROUND_ROBIN
    max_requests_per_connection: 25000
    name: tony_example_name
    tls_context:
      common_tls_context:
        alpn_protocols: 
        - "h2"
    type: STRICT_DNS
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
